@@ -1,3 +1,8 @@
+2012-08-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
+
+    * tests/multi_channel_test.c tests/snr_bw_test.c tests/varispeed_test.c
+    Use fftw_cleanup() to remove all memory leaks reported by valgrind.
+
 2012-08-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>
 
     * src/src_sinc.c
